<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xuanyi.gitapp.ProfileActivity"
    android:weightSum="1">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/profile_bg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/headImage"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:contentDescription="@string/head_image"
            android:src="@drawable/name1"
             />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_toEndOf="@+id/headImage"
            android:layout_toRightOf="@+id/headImage"
            android:text="@string/name"
            android:textColor="#e2b4ea"
            android:textSize="31sp" />

        <TextView
            android:layout_toEndOf="@+id/headImage"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/nameText"
            android:layout_alignRight="@+id/nameText"
            android:layout_below="@+id/nameText"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/headImage"
            android:text="@string/user_name"
            android:textColor="#efe0f4"
            android:textSize="21sp" />



        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/headImage"
            android:background="#c99eec"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_view1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_1" />

                <Button
                    android:id="@+id/info_but1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="gotoFollowers"
                    android:text="@string/followersCount" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                tools:ignore="RelativeOverlap">

                <TextView
                    android:id="@+id/info_view2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_2" />

                <Button
                    android:id="@+id/info_but2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="gotoFollowings"
                    android:text="@string/followingCount" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_view3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_3" />

                <Button
                    android:id="@+id/info_but3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="gotoRepositories"
                    android:text="@string/RepositoryCount" />

            </LinearLayout>


        </RelativeLayout>

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relativeLayout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="gotoLogin"
            android:text="OAuth" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg1"
        android:orientation="vertical">



        <TextView
            android:id="@+id/textView"
            android:text="@string/bio"
            android:textColor="#f9ebfa"
            android:textSize="20sp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView

            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Profile_create_date" />
    </LinearLayout>


</LinearLayout>
